objects/vlocity_ins__ContextRuleset__c.object
<CustomObject>
    <description>DEPRECATED. Use Vlocity Rules.</description>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Expression__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FallbackRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rule Id of the fallback rule ( 1 per ruleset) (IsFallBackRule = TRUE)</description>
        <label>Fallback Rule</label>
        <referenceTo>vlocity_ins__ContextRule__c</referenceTo>
        <relationshipLabel>Vlocity Context Rulesets (Fallback Rule)</relationshipLabel>
        <relationshipName>Vlocity_Context_Rulesets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this context rule set. Used to identify the context rule set across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique context rule set identifier can be used.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__HeaderRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Header rule ,which will determine if this ruleset breaks or not. This is the Id of Rule with (IsRuleHeader flag = True) ( denormalized)</description>
        <label>HeaderRule</label>
        <referenceTo>vlocity_ins__ContextRule__c</referenceTo>
        <relationshipLabel>Vlocity Context Rulesets</relationshipLabel>
        <relationshipName>Vlocity_Context_Rulesets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectId__c</fullName>
        <description>ID of the object against which the ruleset will be executed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectType__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Context Ruleset</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Context Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>